# SUF_new

./: .gitignore  .gitmodules  127_eva.md  B1.md  CMakeLists.txt  DMPF.md  DMPF_2.md  DMPF_3.md  DMPF_4.md  DMPF_5.md  Evaluation.md  LUT.md  LUT_10.md  LUT_10P1.md  LUT_2.md  LUT_3.md  LUT_4.md  LUT_5.md  LUT_6.md  LUT_7.md  LUT_8.md  LUT_9.md  LUT_9P1.md  P1.md  README.md  Verdict.md  accuracy.md  accuracy_report.md  add_eva.md  add_eva_report.md  baseline_fairness_matrix_2026-01-26.md  baseline_status_2026-01-26.md  batch.md  batch_scaling_bert.json  batch_scaling_bert_fix_2026-01-26.json  batch_scaling_bert_fix_2026-01-26b.json  batch_scaling_bert_pinned.json  batch_scaling_bert_seq128_rerun.json  batch_scaling_bert_seq256_rerun.json  batch_scaling_bert_seq512_rerun.json  (+42 more)
accuracy_sweep/: bert_tiny_accuracy.csv
bench/: accuracy_compare.py  fixed_point.py
bench/configs/: accuracy_table4.json
include/suf/: common.hpp  dcf_batch.hpp  dmpf.hpp  gpu_backend.hpp  gpu_kernels.hpp  (+10 more)
results/: ablation_cache_off_bertbase_2026-01-27.jsonl  ablation_cache_on_bertbase_2026-01-27.jsonl  ablation_cpu_vs_gpu_bertbase_2026-01-27.jsonl  ablation_mask0_bertbase_2026-01-27.jsonl  ablation_maskaware_bertbase_2026-01-27.jsonl  absolute_comm_key_tables_2026-01-27.md  activation_microbench_bertbase_gpt2_2026-01-27.md  analysis_breakdown_amdahl_2026-01-27.json  analysis_breakdown_amdahl_2026-01-27_v2.json  analysis_breakdown_amdahl_2026-01-27_v3_selected.json  batch_sweep_internal_metrics_2026-01-27.json  batch_sweep_internal_metrics_mixed_2026-01-27.json  batch_sweep_internal_metrics_selected_2026-01-27.json  bench_suf_model_bertbase_mask0_2026-01-27.jsonl  bench_suf_model_bertbase_maskaware_2026-01-27.jsonl  bench_suf_model_gpt2_mask0_2026-01-27.jsonl  bench_suf_model_gpt2_maskaware_2026-01-27.jsonl  breakdowns_allocated_2026-01-27.json  breakdowns_allocated_2026-01-27_v2.json  breakdowns_allocated_2026-01-27_v3_selected.json  breakdowns_batch_seq128_selected_2026-01-27.json  evaluation_127_comments_batch_2026-01-27.md  evaluation_full_absolute_2026-01-27.md  evaluation_same_mouth_2026-01-27.md  evaluation_unified_2026-01-27.md  padding_ablation_ratios_2026-01-27.json  resume_e2e_runs_2026-01-27.json  resume_seq128_more_models_2026-01-27.json  resume_seq128_runs_2026-01-27.json  resume_seq32_64_runs_2026-01-27.json
scripts/: compare_activation.py  compare_activation_fair.py  compare_sigma.sh  mpc_lambada_export.py  mpc_lambada_run.py  plot_batch_scaling.py  repro_eval_latest.py  run_batch_scaling.py  sigma_accuracy.py
shaft/: LICENSE  README.md  requirements.txt  setup.py
src/: dmpf.cpp  interval_lut.cpp  masked_compile.cpp  secure_program.cpp  sigma_suf_bridge.cu
(+231 files in other folders)
